--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -41,3 +41,10 @@
     display: none;
   }
 }
+
+.profileId {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
