--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,12 @@
 .pageNotFoundText {
   font-size: 400%;
 }
+
+.noDataComp {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
